auth-service/k8s/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: greetings
spec:
  selector: { app: auth-service }
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
